sumo/tests/jtrrouter/errors/false_output/Makefile.am
EXTRA_DIST =  errors.duarouter.exe errors.jtrrouter.exe options.jtrrouter \
output.duarouter.exe output.jtrrouter.exe

